--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,9 @@ html
       a.navbar-brand(href='/') Proud Pete's Pet Emporium
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
+      form.form-inline(action='/search')
+        input.form-control.mr-sm-2(type='search', placeholder='Search', aria-label='Search' name='term')
+        button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
       #navbarSupportedContent.collapse.navbar-collapse
         ul.navbar-nav
           li.nav-item
