--- a/views/layout.pug
+++ b/views/layout.pug
@@ -37,3 +37,4 @@ html
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js")
     script(src="https://unpkg.com/axios/dist/axios.min.js")
+    script(src="/javascripts/scripts.js")
