--- a/views/pets-new.pug
+++ b/views/pets-new.pug
@@ -5,7 +5,7 @@ block content
   .row.justify-content-center
     .col-sm-6
       legend New Pet
-      form(action="#" id="new-pet")
+      form(action="/pets", method="post")
         .form-group
             label Name
             input.form-control(name="name")
