--- a/views/pets-new.pug
+++ b/views/pets-new.pug
@@ -17,10 +17,10 @@ block content
             input.form-control(name="species" required)
         .form-group
             label Rectangular Image URL
-            input.form-control(name="picUrl" required)
+            input.form-control(name="picUrl" required type="url")
         .form-group
             label Square Image URL
-            input.form-control(name="picUrlSq" required)
+            input.form-control(name="picUrlSq" required type="url")
         .form-group
             label Favorite Food
             input.form-control(name="favoriteFood" required)
