--- a/views/pets-new.pug
+++ b/views/pets-new.pug
@@ -26,5 +26,5 @@ block content
             input.form-control(name="favoriteFood" required)
         .form-group
             label Description
-            textarea.form-control(name="description" required)
+            textarea.form-control(name="description" required minlength="140")
         button(type="submit").btn.btn-primary Save
