--- a/views/pets-show.pug
+++ b/views/pets-show.pug
@@ -11,16 +11,19 @@ block content
       h1=pet.name
       p=pet.species
       p Born on #{pet.birthday}
+      p.lead.text-primary $#{pet.price}
       p=pet.description
       .text-right
         a(href="/pets/" + pet.id + "/edit").btn-link Edit
-          form(action=`/pets/${pet._id}/purchase`, method='POST')
-            script.stripe-button(src='https://checkout.stripe.com/checkout.js',
-            data-key=PUBLIC_STRIPE_API_KEY,
-            data-amount='999',
-            data-name="Proud Pete's Pet Emporium",
-            data-description='Widget',
-            data-image='https://stripe.com/img/documentation/checkout/marketplace.png',
-            data-locale='auto',
-            data-zip-code='true')
+        br
+        br
+        form(action=`/pets/${pet._id}/purchase`, method='POST')
+          script.stripe-button(src='https://checkout.stripe.com/checkout.js',
+          data-key=process.env.PUBLIC_STRIPE_API_KEY,
+          data-amount=pet.price * 100,
+          data-name="Proud Pete's Pet Emporium",
+          data-description=`${pet.name} - ${pet.species}`,
+          data-image='https://stripe.com/img/documentation/checkout/marketplace.png',
+          data-locale='auto',
+          data-zip-code='true')
       
